# satph

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  docker.yml
src/: app.ts  authelia.ts  config.ts  logger.ts  main.rs  zValidator.ts
src/adapters/: authelia_http_client.rs
src/app/http/: controllers.rs
src/config/: mod.rs  settings.rs
src/domain/: auth_service.rs  authelia.rs  mod.rs  password.rs  username.rs
src/domain/config/: mod.rs
src/infrastructure/: authelia_http_client.rs  mod.rs
src/infrastructure/config/: settings.rs
src/infrastructure/http/: controllers.rs  mod.rs  routes.rs
