[package]
name = "sftpgo-authelia-totp-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
regex = "1.10"
anyhow = "1.0"
async-trait = "0.1"
